fix overflow scroll in franchise modal

--- a/src/sass/layouts/modals/_modal-location.scss
+++ b/src/sass/layouts/modals/_modal-location.scss
@@ -4,7 +4,7 @@
 
 .modal.location {
   max-width: 440px;
-
+  overflow-y: auto;
   @media screen and (min-width: 768px) {
     max-width: 568px;
     width: 568px;
