--- a/src/sass/layouts/modals/_modal-product.scss
+++ b/src/sass/layouts/modals/_modal-product.scss
@@ -4,7 +4,6 @@
   @media screen and (min-width: 768px) {
     width: 568px;
     padding: 32px 54px;
-    overflow: auto;
   }
 }
 
@@ -47,7 +46,7 @@
     font-size: 16px;
     line-height: 1.4;
     margin-bottom: 32px;
-    width: 448px;
+    max-width: 448px;
   }
 }
 
